test/conformance/kuttl/events/clusterpolicy/no-events-upon-fail-generation/event.yaml
apiVersion: v1
kind: Event
metadata:
  namespace: default
involvedObject:
  apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: rbac-policy
source:
  component: kyverno-generate
