test/conformance/kuttl/events/clusterpolicy/no-events-upon-fail-generation/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: rbac-policy
spec: {}
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
